--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         const deleteStudentButton = document.getElementById('delete-student');
         const updateStudentButton = document.getElementById('update-student');
         const addStudentButton = document.getElementById('add-student');
-        const url = "http://localhost:8000/"
+        const url = "http://api.vdt.strixthekiet.me:8000/"
 
         async function fetchStudents() {
             console.log("fetching students")
